<resources>
    <string name="app_name">GameSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_liste_jeux">Liste_jeux</string>
    <string name="title_activity_liste_utilisateurs">Liste_utilisateurs</string>
    <string name="title_activity_game_information">GameInformation</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="UserID">UserID</string>
    <string name="title_activity_create_game">CreateGame</string>
    <string name="title_activity_liste__editor">Liste_Editor</string>
    <string name="title_activity_editor_information">EditorInformation</string>
    <string name="EditorName">EditorName</string>
    <string name="EditorID">ID de léditeur</string>
    <string name="NomJeu">Nom du jeu</string>
    <string name="IDJeu">ID du jeu</string>
    <string name="DescriptifJeu">Descriptif du jeu</string>
    <string name="EditeurJeu">Editeur du jeu</string>
    <string name="GenreJeu">Genre du jeu</string>
    <string name="DateSortieJeu">Date de sortie du jeu</string>
    <string name="title_activity_list__genre">List_Genre</string>
    <string name="title_activity_kind_information">KindInformation</string>
    <string name="KindName">Nom du genre</string>
    <string name="KindID">ID du genre</string>
    <string name="title_activity_create_editor">CreateEditor</string>
    <string name="title_activity_create_genre">CreateGenre</string>
    <string name="title_activity_create_editeur">CreateEditeur</string>
    <string name="title_activity_editor_for_game">EditorForGame</string>
    <string name="title_activity_add_editor_to_game">AddEditorToGame</string>
    <string name="title_activity_add_genre_to_game">AddGenreToGame</string>
    <string name="title_activity_genre_for_game">GenreForGame</string>

</resources>
